--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
 
         header {
-            background-color: #ffcf00;
+            background-color: #5a6507;
             color: white;
             padding: 20px 0;
             text-align: center;
@@ -65,7 +65,7 @@
         footer {
             text-align: center;
             padding: 20px 0;
-            background-color: #333;
+            background-color: #550202;
             color: white;
             border-radius: 0 0 8px 8px;
             margin-top: 40px;
@@ -76,61 +76,61 @@
 <body>
 
 <header>
-    <h1>About Me</h1>
+    <h1>About Oma</h1>
 </header>
 
 <div class="container">
     <h1>Welcome to My Page!</h1>
-    <p>Hello! My name is <strong>[Your Name]</strong>. Below you'll find a bit more about me, including my hobbies, my favorite food, and a fun fact!</p>
+    <p>Hello! My name is <strong>Nneoma Ajawara</strong>. Below you'll find a bit more about me, including my hobbies, my favorite food, and a fun fact!</p>
 
     <div class="info-box">
         <h2>Name</h2>
-        <p>[Your Name]</p>
+        <p>Nneoma Ajawara</p>
     </div>
 
     <div class="info-box">
         <h2>Hobbies</h2>
-        <p>[Your Hobbies]</p>
+        <p>Cooking, solving puzzles, bothering people...</p>
     </div>
 
     <div class="info-box">
         <h2>Favorite Food</h2>
-        <p>[Your Favorite Food]</p>
+        <p>huevo en recado with almost anything</p>
     </div>
 
     <div class="info-box">
         <h2>Fun Fact</h2>
-        <p>[A Fun Fact About You]</p>
+        <p>Je sais une petite du Francais</p>
     </div>
 </div>
 
 <div class="container">
     <h1>Welcome to My Page!</h1>
-    <p>Hello! My groupmate's name is <strong>[Your Name]</strong>. Here is what I've learned about them.</p>
+    <p>Hello! My groupmate's name is <strong>empty</strong>. Here is what I've learned about them.</p>
 
     <div class="info-box">
         <h2>Name</h2>
-        <p>[Their Name]</p>
+        <p>N/A</p>
     </div>
 
     <div class="info-box">
         <h2>Hobbies</h2>
-        <p>[Their Hobbies]</p>
+        <p>N/A</p>
     </div>
 
     <div class="info-box">
         <h2>Favorite Food</h2>
-        <p>[Their Favorite Food]</p>
+        <p>N/A</p>
     </div>
 
     <div class="info-box">
         <h2>Fun Fact</h2>
-        <p>[A Fun Fact About Them]</p>
+        <p>N/A</p>
     </div>
 </div>
 
 <footer>
-    <p>&copy; 2024 [Your Name]. All rights reserved.</p>
+    <p>&copy; 2025 Nneoma Ajawara. All rights reserved.</p>
 </footer>
 
 </body>
